# HAUTNetworkGuard

./: .gitattributes  .gitignore  README.md
.github/workflows/: build.yml
OpenWrt/: README.md  install-online.sh  install.sh  uninstall-online.sh  uninstall.sh  upgrade-online.sh
OpenWrt/files/etc/config/: haut-network-guard
OpenWrt/files/usr/lib/haut-network-guard/: api.lua  crypto.lua  log.lua  main.lua  protocol.lua
Windows/: AIREADME.md  CMakeLists.txt
Windows/src/: api.cpp  api.h  config.cpp  config.h  encryption.cpp  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol_utils.cpp  protocol_utils.h  trayicon.cpp  trayicon.h
Windows/tests/: windows_smoke_tests.cpp
docs/: LOGGING_CONTRACT.md  PROJECT_BASELINE_AND_PLAN_2026-04-11.md  SRUN3K_PROTOCOL_SPEC.md
macOS/: AIREADME.md  Info.plist  build.sh  create-dmg.sh
macOS/Sources/: AboutWindow.swift  AppDelegate.swift  AppRuntime.swift  Config.swift  DirectHTTPClient.swift  LaunchManager.swift  Logger.swift  SettingsWindow.swift  SrunAPI.swift  SrunProtocol.swift  StatusBarController.swift  UpdateChecker.swift  UpdateWindow.swift
macOS/tests/: SmokeTests.swift  UISmokeTests.swift  run_smoke_tests.sh  run_ui_smoke_tests.sh
tests/: test_docs_contract.py  test_openwrt_modules.lua  test_protocol_contract.py
tests/fixtures/: protocol_vectors.json
